--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-slate
-title: [JointFlow]
-description: [DFN Generator - open source project page]
+title: JointFlow
+description: DFN Generator - open source project page
+show_downloads: ["true"]
 github:
   zip_url: https://github.com/JointFlow/DFNGenerator/archive/refs/heads/main.zip
   another_url: https://github.com/JointFlow/DFNGenerator
