--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ title: JointFlow
 description: DFN Generator - open source project page.
 show_downloads: true
 google_analytics:
+repository: jointflow/DFNGenerator
 github:
   zip_url: https://github.com/JointFlow/DFNGenerator/archive/refs/heads/main.zip
